PG: Introduction to Layout API
[ ] May break build
[ ] Breaks existing applications
[ ] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[x] Documentation

--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -789,7 +789,6 @@ client nodes at the beginning of each frame.
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/frusta.pdf}
   {\caption{\label{fFrusta}Wall and projection parameters}}
-  \vspace{-3ex}
 \end{wrapfigure}
 Compounds have a frustum description to define the physical layout of
 the display environment. 
@@ -2380,7 +2379,7 @@ chart of the rendering algorithm, which performs efficient view frustum
 and range culling.
 
 \begin{wrapfigure}{r}{.618\textwidth}
-  \vspace{-2ex}\includegraphics[width=.618\textwidth]{images/render.pdf}
+  \includegraphics[width=.618\textwidth]{images/render.pdf}
   {\caption{\label{fRender}Main Render Loop}}
 \end{wrapfigure}
 The actual rendering uses display lists or vertex buffer objects. These
@@ -3306,7 +3305,6 @@ pipeline also approaches a constant value, i.e., the full frame buffer.
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/directSend.pdf}
   {\caption{\label{fDirectSend}Parallel Direct Send Compositing}}
-  \vspace{-4ex}
 \end{wrapfigure}
 \fig{fDirectSend} illustrates this algorithm for three channels. The
 Equalizer website contains a
@@ -3460,9 +3458,8 @@ visualize with any other approach.
 \end{figure}
 
 \begin{wrapfigure}{r}{.382\textwidth}
-  \vspace{-3ex}\includegraphics[width=.382\textwidth]{images/volResult.png}
+  \includegraphics[width=.382\textwidth]{images/volResult.png}
   {\caption{\label{fVolResult}Result of \fig{fBlendPerspective}}}
-  \vspace{-5ex}
 \end{wrapfigure}
 For recomposition, the 2D frame buffer contents are blended to form a
 seamless picture. For correct blending, the frames are ordered in the
